<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <GVL Name="GVL_SEQUENCE" Id="{afa24cfe-a057-4c9d-bd84-b82c36777d71}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
//	fbUpdateModue:FB_UPDATE_MODULE;
	
	fbDeviationCheck		:ARRAY[1..29] OF FB_DeviationCheck;
	fbSensorLimitCheck		:ARRAY[1..4] OF FB_SensorLimitCheck;
	fbFaultCheck			:ARRAY[1..8] OF FB_FaultCheck;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>